# jlang

./: .clang-format  .cspell.json  CMakeLists.txt  README.md  cspell.json
.github/workflows/: build.yml  deploy-docs.yml  docs-format.yml  formatting.yml  test.yml
docs/: index.html  package.json  vite.config.ts
docs/src/: App.tsx  index.css  layout.css
docs/src/components/: Layout.tsx  ThemeToggle.tsx
docs/src/pages/: ControlFlow.tsx  ErrorHandling.tsx  Functions.tsx  Introduction.tsx  Memory.tsx  NullSafety.tsx  Operators.tsx  Structs.tsx  Types.tsx
jlang-core/: CMakeLists.txt
jlang-core/include/jlang/AST/: Ast.h  AstPrinter.h  TypeRef.h
jlang-core/include/jlang/AST/Expressions/: Expressions.h
jlang-core/include/jlang/AST/Statements/: Statements.h
jlang-core/include/jlang/AST/TopLevelDecl/: TopLevelDecl.h
jlang-core/include/jlang/CodeGen/: AstVisitor.h  CodeGen.h  SymbolTable.h
jlang-core/include/jlang/Common/: Logger.h
jlang-core/include/jlang/Parser/: Parser.h
jlang-core/include/jlang/Scanner/: Scanner.h  Token.h
jlang-core/include/jlang/SemanticAnalyzer/: SemanticAnalyzer.h
jlang-core/src/: Main.cpp
jlang-core/src/AST/: AstPrinter.cpp
jlang-core/src/CodeGen/: CodeGen.cpp  CodeGenTypes.cpp
jlang-core/src/CodeGen/Decl/: CodeGenDecl.cpp
jlang-core/src/CodeGen/Expr/: CodeGenAccessExpr.cpp  CodeGenArrayExpr.cpp  CodeGenBinaryExpr.cpp  CodeGenLiteralExpr.cpp  CodeGenResultExpr.cpp  CodeGenUnaryExpr.cpp
jlang-core/src/CodeGen/Stmt/: CodeGenStmt.cpp
jlang-core/src/Parser/: Parser.cpp
jlang-core/src/Scanner/: Scanner.cpp
jlang-core/src/SemanticAnalyzer/: SemanticAnalyzer.cpp
jlang-core/test/AST/: AstPrinterTests.cpp
jlang-core/test/Parser/: ParserTests.cpp
jlang-core/test/Scanner/: ScannerTests.cpp
jlang-dev-guide/: index.html  package-lock.json  package.json  vite.config.ts
jlang-dev-guide/src/: App.tsx  chapters.ts  layout.css
jlang-dev-guide/src/components/: Layout.tsx  PageNav.tsx  Sidebar.tsx
jlang-dev-guide/src/pages/: Introduction.tsx
jlang-docs/: index.html  package-lock.json  package.json  vite.config.ts
jlang-docs/src/: App.tsx  chapters.ts  index.css  layout.css
jlang-docs/src/components/: BitVisualizer.tsx  Callout.tsx  CodeBlock.tsx  Layout.tsx  PageNav.tsx  ParkingAd.tsx  Paywall.tsx  ScrollHints.tsx  Sidebar.tsx  ThemeToggle.tsx
jlang-docs/src/pages/: Arrays.tsx  Comments.tsx  ControlFlow.tsx  Ending.tsx  ErrorHandling.tsx  Functions.tsx  Generics.tsx  GettingStarted.tsx  Introduction.tsx  Memory.tsx  NullSafety.tsx  Operators.tsx  Pointers.tsx  Preface.tsx  Structs.tsx  TableOfContents.tsx  TableOfVideos.tsx  TechnologiesUsed.tsx  Types.tsx  Variables.tsx
jlang-examples/basic/: comments.j
jlang-examples/collections/: foreach.j  vector.j
jlang-examples/control-flow/: continue.j  control_flow.j  switch.j
jlang-examples/interfaces/: interfaces.j
jlang-examples/null-safety/: null_safety.j
jlang-examples/operators/: bitwise.j  compound_assignment.j  logical_operators.j
jlang-examples/preprocessor/: preprocessor.j
jlang-examples/structs/: struct_features.j
jlang-examples/types/: booleans.j  type_inference.j  types.j
jlang-examples/variables/: immutable_val.j  unused_variable.j
jlang-preprocessor/: CMakeLists.txt
jlang-preprocessor/include/jlang/Preprocessor/: ConditionalStack.h  DirectiveParser.h  IncludeResolver.h  MacroTable.h  PreprocessorFacade.h  Trie.h
jlang-preprocessor/src/: ConditionalStack.cpp  DirectiveParser.cpp  IncludeResolver.cpp  MacroTable.cpp  PreprocessorFacade.cpp
jlang-shared/: CMakeLists.txt
jlang-stl/: CMakeLists.txt
jlang-stl/include/jlang_stl/: vector.h
jlang-stl/src/: vector.c
samples/: arrays.j  break.j  elvis_operator.j  generics.j  preprocessor_defs.j  result_type.j  structs.j
scripts/: format.sh
src/: Main.cpp
src/AST/: Ast.h  AstPrinter.cpp  AstPrinter.h  TypeRef.h
src/CodeGen/: AstVisitor.h  CodeGen.cpp  CodeGen.h  CodeGenDecl.cpp  CodeGenExpr.cpp  CodeGenStmt.cpp  CodeGenTypes.cpp  SymbolTable.h
src/Optimizer/: LoopUnroller.cpp  LoopUnroller.h
src/Parser/: Parser.cpp  Parser.h
src/Preprocessor/: ConditionalStack.cpp  DirectiveParser.cpp  DirectiveParser.h  IncludeResolver.cpp  IncludeResolver.h  MacroTable.cpp  MacroTable.h  Preprocessor.cpp  Preprocessor.h  PreprocessorFacade.cpp  PreprocessorFacade.h  Trie.h
src/Scanner/: Scanner.cpp  Scanner.h  Token.h
src/SemanticAnalyzer/: SemanticAnalyzer.cpp  SemanticAnalyzer.h
src/Utils/: StringUtils.h
(+13 files in other folders)
